--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,15 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
  */
+
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+// @import 'library/nice-select';
+
+@import 'me/reset';
+@import 'me/fonts';
+@import 'me/mix-ins';
+@import 'me/general';
+@import 'me/sign-in';
