--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width">
   </head>
-  <% if !current_page?('/sign_in') %>
+  <% if controller_name == "sessions" %>
+    <body>
+      <%= yield %>
+    </body>
+  <% else %>
     <body>
       <div id="admin-framework">
         <div id="admin-row" class="row">
@@ -38,10 +42,6 @@
           </div>
         </div>
       </div>
-    </body>
-  <% else %>
-    <body>
-      <%= yield %>
     </body>
   <% end %>
 </html>
