--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,8 @@
  *= require_self
  */
 
+$button-color: #01647C;
+
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 // @import 'library/nice-select';
