--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,3 +25,4 @@ $button-color: #01647C;
 @import 'me/general';
 @import 'me/sign-in';
 @import 'me/current-user-dropdown';
+@import 'me/new-thing';
