add user details component

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,3 +26,4 @@ $button-color: #01647C;
 @import 'me/sign-in';
 @import 'me/current-user-dropdown';
 @import 'me/new-thing';
+@import 'me/user-details';
