--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -12,6 +12,10 @@ body {
   background-color: #F5F6F7;
   height: 100%;
 
+  #current-user-id {
+    display: none;
+  }
+
   #admin-framework {
     height: 100%;
 
