--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Film Movement</title>
+    <title>Film Movement Database</title>
+    <%= favicon_link_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width">
+    <div id="current-user-id"><%= current_user ? current_user.id : "" %></div>
   </head>
   <% if controller_name == "sessions" %>
     <body>
