update/delete user

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,4 +26,5 @@ $button-color: #01647C;
 @import 'me/sign-in';
 @import 'me/current-user-dropdown';
 @import 'me/new-thing';
+@import 'me/users-index';
 @import 'me/user-details';
