--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,3 +28,5 @@ $button-color: #01647C;
 @import 'me/new-thing';
 @import 'me/users-index';
 @import 'me/user-details';
+@import 'me/licensors-index';
+@import 'me/licensor-details';
