add films index component and importer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,3 +30,4 @@ $button-color: #01647C;
 @import 'me/user-details';
 @import 'me/licensors-index';
 @import 'me/licensor-details';
+@import 'me/films-index';
