--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,21 +20,21 @@
       </div>
       <div id="admin-framework">
         <div id="admin-row" class="row">
-          <div id="admin-sidebar" class="col-xs-2 match-height">
+          <div id="admin-sidebar" class="col-xs-2 match-height-layout">
             <div id="admin-sidebar-header"></div>
             <div id="admin-sidebar-body">
               <ul>
                 <li><a href="/films">Films</a></li>
+                <li><a href="/shorts">Shorts</a></li>
                 <li><a href="/licensors">Licensors</a></li>
                 <li><a href="/theaters">Theaters</a></li>
                 <li><a href="/bookings">Bookings</a></li>
                 <li><a href="/dvd-vendors">DVD Vendors</a></li>
                 <li><a href="/users">Users</a></li>
-                <li><a href="/import">Import</a></li>
               </ul>
             </div>
           </div>
-          <div id="admin-right-column" class="col-xs-10 match-height">
+          <div id="admin-right-column" class="col-xs-10 match-height-layout">
             <nav id="admin-navbar" class="clearfix">
               <div id="admin-navbar-menu">
                 <div id="current-user-dropdown">
