--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -86,10 +86,31 @@ body {
     margin-bottom: 62px;
 
     h1 {
+      margin-top: 10px;
+      display: inline-block;
       font-size: 20px;
       color: #2C2F33;
       letter-spacing: 1.08px;
       margin-bottom: 28px;
+    }
+
+    .float-button {
+      float: right;
+    }
+
+    .search-box {
+      float: right;
+      margin-right: 30px;
+      border-radius: 100px;
+      padding: 15px 15px 15px 50px;
+      width: 250px;
+      background-image: asset-data-url("magnifying-glass.png");
+      background-repeat: no-repeat;
+      background-position: 15px 11px;
+
+      &:focus {
+        outline: none;
+      }
     }
 
     .white-box {
