--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -94,6 +94,11 @@ body {
       margin-bottom: 28px;
     }
 
+    hr {
+      margin-top: 0;
+      margin-bottom: 60px;
+    }
+
     .float-button {
       float: right;
     }
