update revenue percentages

--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -40,9 +40,12 @@
     }
   }
 
-  .percentage-column {
+  .revenue-percentage {
+    width: 33%;
+    float: left;
+
     input {
-      max-width: 100px;
+      width: 90%;
     }
   }
 }
