--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -97,6 +97,8 @@ body {
     hr {
       margin-top: 0;
       margin-bottom: 30px;
+      margin-left: -32px;
+      width: calc(100% + 64px);
     }
 
     .float-button {
