add report details component

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,3 +33,4 @@ $button-color: #01647C;
 @import 'me/films-index';
 @import 'me/film-details';
 @import 'me/confirm-delete';
+@import 'me/report-details';
