style row names

--- a/app/assets/stylesheets/me/report-details.scss
+++ b/app/assets/stylesheets/me/report-details.scss
@@ -39,7 +39,11 @@
   }
 
   .stream-name {
+    margin-top: 10px;
     text-align: center;
+    font-family: 'TeachableSansMedium';
+    font-size: 12px;
+    color: #2C2F33;
   }
 
   input {
