--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,10 +27,11 @@
                 <li><a href="/films">Films</a></li>
                 <li><a href="/shorts">Shorts</a></li>
                 <li><a href="/licensors">Licensors</a></li>
-                <li><a href="/theaters">Theaters</a></li>
-                <li><a href="/bookings">Bookings</a></li>
-                <li><a href="/dvd-vendors">DVD Vendors</a></li>
+                <!-- <li><a href="/theaters">Theaters</a></li> -->
+                <!-- <li><a href="/bookings">Bookings</a></li> -->
+                <!-- <li><a href="/dvd-vendors">DVD Vendors</a></li> -->
                 <li><a href="/users">Users</a></li>
+                <li><a href="/royalty_reports">Royalties</a></li>
               </ul>
             </div>
           </div>
