reports index component

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,11 +26,11 @@ $button-color: #01647C;
 @import 'me/sign-in';
 @import 'me/current-user-dropdown';
 @import 'me/new-thing';
-@import 'me/users-index';
 @import 'me/user-details';
 @import 'me/licensors-index';
 @import 'me/licensor-details';
 @import 'me/films-index';
 @import 'me/film-details';
 @import 'me/confirm-delete';
+@import 'me/reports-index';
 @import 'me/report-details';
