add days due dropdown

--- a/app/assets/stylesheets/me/reports-index.scss
+++ b/app/assets/stylesheets/me/reports-index.scss
@@ -9,4 +9,15 @@
     top: 12px;
     right: 0;
   }
+
+  th {
+    width: 350px;
+  }
+
+  .nice-select {
+    width: 100px;
+    position: absolute;
+    top: 14px;
+    right: 300px;
+  }
 }
