upload revenue file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,4 +50,10 @@
       </div>
     </body>
   <% end %>
+  <div id="upload-form">
+    <%= form_for RoyaltyReport.first do |f| %>
+      <%= f.file_field :file %>
+      <input id="submit-button" type="submit" />
+    <% end %>
+  </div>
 </html>
