toggle royalty report sort/search by title/licensor

--- a/app/assets/stylesheets/me/reports-index.scss
+++ b/app/assets/stylesheets/me/reports-index.scss
@@ -24,6 +24,18 @@
   .arrow-button {
     min-width: 25px;
   }
+
+  .sort-header-active {
+    display: inline;
+    color: #01647C;
+    cursor: default;
+    font-family: 'TeachableSansExtraBold';
+  }
+
+  .sort-header-inactive {
+    display: inline;
+    cursor: pointer;
+  }
 }
 
 .ReactModalPortal {
