--- a/app/assets/stylesheets/me/reports-index.scss
+++ b/app/assets/stylesheets/me/reports-index.scss
@@ -10,8 +10,20 @@
     right: 0;
   }
 
-  th {
-    width: 350px;
+  th:first-of-type {
+    width: 40%;
+  }
+
+  th:nth-of-type(2) {
+    width: 30%;
+  }
+
+  th:nth-of-type(3) {
+    width: 15%;
+  }
+
+  th:nth-of-type(4) {
+    width: 15%;
   }
 
   .nice-select {
