--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -4,6 +4,20 @@
     width: 100%;
   }
 
+  input.checkbox {
+    display: inline-block;
+    width: auto;
+    margin-right: 25px;
+  }
+
+  label.checkbox {
+    display: inline-block;
+    font-family: 'teachablesansmedium';
+    color: #2C2F33;
+    font-size: 12px;
+    margin-bottom: 15px;
+  }
+
   .noFieldError {
     margin-bottom: 30px;
   }
@@ -52,6 +66,55 @@
   table {
     margin-bottom: 30px;
   }
+
+  .rights-checkboxes {
+    input {
+      width: auto;
+      margin-right: 20px;
+    }
+
+    label {
+      font-family: 'teachablesansmedium';
+      color: #2C2F33;
+      font-size: 12px;
+      margin-bottom: 15px;
+    }
+  }
+
+  hr#above-checkboxes {
+    margin-bottom: 15px;
+  }
+
+  .checkboxes {
+
+    .col-xs-6 {
+      text-align: center;
+    }
+
+    input {
+      width: auto;
+      margin-right: 20px;
+    }
+
+    label {
+      font-family: 'teachablesansmedium';
+      color: #2C2F33;
+      font-size: 12px;
+      margin-bottom: 15px;
+    }
+  }
+
+  .reserve-section.no-reserve {
+
+    h2 {
+      color: gray;
+    }
+
+    input {
+      color: white;
+      user-select: none;
+    }
+  }
 }
 
 .licensor-modal-list {
@@ -69,42 +132,5 @@
     &:hover {
       background-color: #F5F6F7;
     }
-  }
-}
-
-.rights-checkboxes {
-  input {
-    width: auto;
-    margin-right: 20px;
-  }
-
-  label {
-    font-family: 'teachablesansmedium';
-    color: #2C2F33;
-    font-size: 12px;
-    margin-bottom: 15px;
-  }
-}
-
-hr#above-checkboxes {
-  margin-bottom: 15px;
-}
-
-.checkboxes {
-
-  .col-xs-6 {
-    text-align: center;
-  }
-
-  input {
-    width: auto;
-    margin-right: 20px;
-  }
-
-  label {
-    font-family: 'teachablesansmedium';
-    color: #2C2F33;
-    font-size: 12px;
-    margin-bottom: 15px;
   }
 }
