--- a/app/views/royalty_reports/index.html.erb
+++ b/app/views/royalty_reports/index.html.erb
@@ -1,1 +1,6 @@
+<% if flash[:sage_import_id] %>
+  <div id="sage-import-id" class="hidden"><%= flash[:sage_import_id] %></div>
+  <div id="sage-import-label" class="hidden"><%= flash[:label].capitalize %></div>
+  <div id="sage-import-quarter" class="hidden"><%= flash[:quarter] %></div>
+<% end %>
 <div id="reports-index">replace me</div>
