--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,14 +23,16 @@ $button-color: #01647C;
 @import 'me/fonts';
 @import 'me/mix-ins';
 @import 'me/general';
-@import 'me/sign-in';
+
 @import 'me/current-user-dropdown';
-@import 'me/new-thing';
-@import 'me/user-details';
-@import 'me/licensors-index';
-@import 'me/licensor-details';
+@import 'me/confirm-delete';
 @import 'me/films-index';
 @import 'me/film-details';
-@import 'me/confirm-delete';
+@import 'me/giftbox-details';
+@import 'me/licensors-index';
+@import 'me/licensor-details';
+@import 'me/new-thing';
 @import 'me/reports-index';
 @import 'me/report-details';
+@import 'me/sign-in';
+@import 'me/user-details';
