--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
                 <li><a href="/films">Films</a></li>
                 <li><a href="/shorts">Shorts</a></li>
                 <li><a href="/licensors">Licensors</a></li>
+                <li><a href="/giftboxes">Gift Boxes</a></li>
                 <!-- <li><a href="/theaters">Theaters</a></li> -->
                 <!-- <li><a href="/bookings">Bookings</a></li> -->
                 <!-- <li><a href="/dvd-vendors">DVD Vendors</a></li> -->
