--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -18,6 +18,36 @@
     margin-bottom: 15px;
   }
 
+  .tabs-row {
+    margin-left: 60px;
+    display: inline-block;
+    font-size: 14px;
+    vertical-align: bottom;
+
+    .tab {
+      float: left;
+      background-color: white;
+      vertical-align: bottom;
+      padding: 20px 20px 15px 20px;
+      border-top-right-radius: 10px;
+      border-top-left-radius: 10px;
+      user-select: none;
+
+      &:not(:first-of-type) {
+        margin-left: 5px;
+      }
+
+      &:not(.selected) {
+        margin-bottom: 2px;
+        padding-bottom: 13px;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
   .noFieldError {
     margin-bottom: 30px;
   }
