start dvd details component

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,7 @@ $button-color: #01647C;
 @import 'me/current-user-dropdown';
 @import 'me/confirm-delete';
 @import 'me/dvd-customer-details';
+@import 'me/dvd-details';
 @import 'me/films-index';
 @import 'me/film-details';
 @import 'me/giftbox-details';
