error message for multiple tabs

--- a/app/assets/stylesheets/me/film-details.scss
+++ b/app/assets/stylesheets/me/film-details.scss
@@ -18,6 +18,12 @@
     margin-bottom: 15px;
   }
 
+  .error-guide {
+    display: inline-block;
+    margin-left: 20px;
+    color: red;
+  }
+
   .tabs-row {
     margin-left: 60px;
     display: inline-block;
