add new dvd to film

--- a/app/assets/stylesheets/me/new-thing.scss
+++ b/app/assets/stylesheets/me/new-thing.scss
@@ -4,9 +4,17 @@
   .white-box {
     box-shadow: none !important;
 
-    input {
+    input, .nice-select {
       width: 100%;
       margin-bottom: 10px;
+    }
+
+    .nice-select {
+      margin-bottom: 32px;
+    }
+
+    .dvd-type-column {
+      margin-bottom: 150px;
     }
 
     .noFieldError {
