--- a/app/assets/stylesheets/me/dvd-details.scss
+++ b/app/assets/stylesheets/me/dvd-details.scss
@@ -41,11 +41,15 @@
   }
 
   table {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 
     .name-column {
       color: #5F5F5F;
     }
+  }
+
+  .blue-outline-button {
+    margin-bottom: 30px;
   }
 
   a#delete {
