--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,6 +33,7 @@ $button-color: #01647C;
 @import 'me/giftbox-details';
 @import 'me/licensors-index';
 @import 'me/licensor-details';
+@import 'me/modal-select';
 @import 'me/new-thing';
 @import 'me/reports-index';
 @import 'me/report-details';
