--- a/app/assets/stylesheets/me/general.scss
+++ b/app/assets/stylesheets/me/general.scss
@@ -271,6 +271,18 @@ body {
       th:first-of-type {
         padding-left: 10px;
       }
+
+      .sort-header-active {
+        display: inline;
+        color: #01647C;
+        cursor: default;
+        font-family: 'TeachableSansExtraBold';
+      }
+
+      .sort-header-inactive {
+        display: inline;
+        cursor: pointer;
+      }
     }
 
     tbody {
@@ -293,6 +305,10 @@ body {
           border-radius: 100%;
           margin-right: 10px;
         }
+      }
+
+      td.indent {
+        padding-left: 10px;
       }
 
       tr:first-child {
