add fields to add new dvd_customer

--- a/app/assets/stylesheets/me/new-thing.scss
+++ b/app/assets/stylesheets/me/new-thing.scss
@@ -24,5 +24,27 @@
     .yesFieldError {
       margin-bottom: 15px;
     }
+
+    input.checkbox {
+      display: inline-block;
+      width: auto;
+      margin-right: 25px;
+    }
+
+    label.checkbox {
+      display: inline-block;
+      font-family: 'teachablesansmedium';
+      color: #2C2F33;
+      font-size: 12px;
+      margin-bottom: 15px;
+    }
+
+    .consignment-column {
+      padding-top: 42px;
+    }
+
+    .dvd-customer-placeholder {
+      margin-bottom: 115px;
+    }
   }
 }
