import inventory file and update stock

--- a/app/views/purchase_orders/index.html.erb
+++ b/app/views/purchase_orders/index.html.erb
@@ -1,1 +1,4 @@
+<% if flash[:inventory_import_id] %>
+  <div id="inventory-import-id" class="hidden"><%= flash[:inventory_import_id] %></div>
+<% end %>
 <div id="purchase-orders-index">replace me</div>
