--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,4 +70,10 @@
       <input id="submit-button-sage" type="submit" />
     <% end %>
   </div>
+  <div id="upload-form-inventory" class="hidden">
+    <%= form_for User.third do |f| %>
+      <%= f.file_field :file %>
+      <input id="submit-button-inventory" type="submit" />
+    <% end %>
+  </div>
 </html>
