update stock alert

--- a/app/assets/javascripts/me/images.js.erb
+++ b/app/assets/javascripts/me/images.js.erb
@@ -1,4 +1,5 @@
 Images = {
   openModal: "<%= image_path('open-modal.png') %>",
-  blackPlus: "<%= image_path('black-plus.png') %>"
+  blackPlus: "<%= image_path('black-plus.png') %>",
+  attention: "<%= image_path('attention.png') %>"
 }
