edit/delete purchase order

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,3 +40,4 @@ $button-color: #01647C;
 @import 'me/sign-in';
 @import 'me/user-details';
 @import 'me/purchase-orders-index';
+@import 'me/purchase-order-details';
