--- a/app/assets/stylesheets/me/purchase-order-details.scss
+++ b/app/assets/stylesheets/me/purchase-order-details.scss
@@ -44,4 +44,13 @@
   a#delete {
     float: right;
   }
+
+  .blue-outline-button {
+    padding: 7px 20px;
+    margin-bottom: 30px;
+  }
+
+  a#save-address {
+    float: right;
+  }
 }
