--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
                 <!-- <li><a href="/theaters">Theaters</a></li> -->
                 <!-- <li><a href="/bookings">Bookings</a></li> -->
                 <li><a href="/dvd_customers">DVD Customers</a></li>
+                <li><a href="/shipping_addresses">DVD Ship Addresses</a></li>
                 <li><a href="/purchase_orders">DVD POs</a></li>
                 <li><a href="/giftboxes">Gift Boxes</a></li>
                 <li><a href="/users">Users</a></li>
