edit and delete shipping addresses

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,3 +41,4 @@ $button-color: #01647C;
 @import 'me/user-details';
 @import 'me/purchase-orders-index';
 @import 'me/purchase-order-details';
+@import 'me/shipping-address-details';
