working on pos/invoices

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,3 +42,4 @@ $button-color: #01647C;
 @import 'me/purchase-orders-index';
 @import 'me/purchase-order-details';
 @import 'me/shipping-address-details';
+@import 'me/invoice-details';
