dvd customers billing addresses

--- a/app/assets/stylesheets/me/dvd-customer-details.scss
+++ b/app/assets/stylesheets/me/dvd-customer-details.scss
@@ -1,5 +1,12 @@
 #dvd-customer-details {
 
+  p {
+    font-weight: bold;
+    font-size: 16px;
+    font-family: 'teachablesansmedium';
+    margin-bottom: 30px;
+  }
+
   input, .nice-select {
     width: 100%;
   }
