stock warning, create invoices with billing address, build invoice filter modal

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,4 +42,5 @@ $button-color: #01647C;
 @import 'me/purchase-orders-index';
 @import 'me/purchase-order-details';
 @import 'me/shipping-address-details';
+@import 'me/invoices-index';
 @import 'me/invoice-details';
