--- a/app/assets/stylesheets/me/purchase-order-details.scss
+++ b/app/assets/stylesheets/me/purchase-order-details.scss
@@ -55,6 +55,11 @@
       cursor: default;
     }
 
+    td.warning {
+      color: red;
+      font-family: 'teachablesansbold';
+    }
+
     .name-column {
       color: #5F5F5F;
     }
