fix billing name in invoice creation, add info to invoices/rows

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
                 <li><a href="/dvd_customers">DVD Customers</a></li>
                 <li><a href="/shipping_addresses">DVD Ship Addresses</a></li>
                 <li><a href="/purchase_orders">DVD POs</a></li>
+                <li><a href="/dvd_reports">DVD Reports</a></li>
                 <li><a href="/invoices">Invoices</a></li>
                 <li><a href="/giftboxes">Gift Boxes</a></li>
                 <li><a href="/users">Users</a></li>
