--- a/app/assets/stylesheets/me/new-thing.scss
+++ b/app/assets/stylesheets/me/new-thing.scss
@@ -64,5 +64,14 @@
       height: 200px;
       overflow-y: scroll;
     }
+
+    .return-customer {
+      margin-bottom: 44px;
+      
+      ul {
+        height: 120px;
+        overflow-y: scroll;
+      }
+    }
   }
 }
