--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,3 +45,4 @@ $button-color: #01647C;
 @import 'me/invoices-index';
 @import 'me/invoice-details';
 @import 'me/dvd-reports';
+@import 'me/return-details';
